# Portafolio2

./: CMakeLists.txt
Includes/: minunit.h
Punto1/: Ejercicio1.c  Ejercicio1.h  main.c  minunit.c
Punto10/: Ejercicio10.c  Ejercicio10.h  main.c
Punto2/: Ejercicio2.c  Ejercicio2.h  minunit.c
Punto3/: Ejercicio3.c  Ejercicio3.h
Punto4/: Ejercicio4.c  Ejercicio4.h
Punto5/: Ejercicio5.c  Ejercicio5.h  main.c
Punto6/: Ejercicio6.c  Ejercicio6.h  html  main.c  minunit6.c
Punto7/: Ejercicio7.c  Ejercicio7.h  main.c  minunit7.c
Punto8/: Ejercicio8.c  Ejercicio8.h
Punto9/: Ejercicio9.c  Ejercicio9.h  minunit.c
